--- a/backend/.env.example
+++ b/backend/.env.example
@@ -62,4 +62,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# Google AI Services Configuration
+GOOGLE_GEMINI_API_KEY=
+GOOGLE_CLOUD_PROJECT_ID=
+GOOGLE_CLOUD_LOCATION=us-central1
+
 VITE_APP_NAME="${APP_NAME}"
