fix and complete the connection frontend and backend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -33,7 +33,15 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+BROADCAST_CONNECTION=reverb
+
+REVERB_APP_ID=1
+REVERB_APP_KEY=local-app-key
+REVERB_APP_SECRET=local-app-secret
+REVERB_HOST=localhost
+REVERB_PORT=8081
+REVERB_SCHEME=http
+REVERB_SERVER_PORT=8081
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
@@ -67,4 +75,12 @@ GOOGLE_GEMINI_API_KEY=
 GOOGLE_CLOUD_PROJECT_ID=
 GOOGLE_CLOUD_LOCATION=us-central1
 
+# Hugging Face API for Image Generation (Stable Diffusion XL)
+# Get token from: https://huggingface.co/settings/tokens
+HUGGINGFACE_TOKEN=
+
 VITE_APP_NAME="${APP_NAME}"
+
+# ApiFree - Nano Banana PRO EDIT (Image Generation)
+# Get key from: https://apifree.ai
+APIFREE_API_KEY=
